# norfair

./: .editorconfig  .gitignore  .pylintrc  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  README.rst  build.py  demo.py  mkdocs.yml  pyproject.toml  tox.ini  versions.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help_wanted.md
.github/workflows/: ci.yml  docs.yml  lint.yml
2.0/: index.html  objects.inv  sitemap.xml
2.0/reference/camera_motion/: index.html
2.0/reference/drawing/: index.html
2.0/reference/tracker/: index.html
2.0/reference/utils/: index.html
2.0/reference/video/: index.html
2.0/search/: search_index.json
2.1/: 404.html  deploy_docs.py  index.html  objects.inv  sitemap.xml
2.1.1/: sitemap.xml
2.1.1/reference/camera_motion/: index.html
2.1.1/reference/distances/: index.html
2.1.1/reference/metrics/: index.html
2.1/css/: custom.css
2.1/getting_started/: index.html
2.1/reference/: index.html
2.1/reference/camera_motion/: index.html
2.1/reference/distances/: index.html
2.1/reference/drawing/: index.html
2.1/reference/filter/: index.html
2.1/reference/metrics/: index.html
2.1/reference/tracker/: index.html
2.1/reference/utils/: index.html
2.1/reference/video/: index.html
2.2/: index.html  objects.inv
2.2/reference/: index.html
2.2/reference/camera_motion/: index.html
2.2/reference/distances/: index.html
2.2/reference/drawing/: index.html
2.2/reference/filter/: index.html
2.2/reference/metrics/: index.html
2.2/reference/tracker/: index.html
2.2/reference/utils/: index.html
2.2/reference/video/: index.html
2.2/search/: search_index.json
demos/: detectron2_cars.py  detectron2_config.yaml  openpose_interpolation.py
demos/3d_track/: Dockerfile  README.md  run_gpu.sh
demos/3d_track/src/: demo.py  utils.py
demos/alphapose/: Dockerfile  Dockerfile.local  README.md  dataloader.py  fn.py  requirements.txt  run_docker.sh  run_gpu.sh  setup.py  writer.py
demos/camera_motion/: Dockerfile  Dockerfile.local  README.md  run_docker.sh
demos/camera_motion/src/: demo.py
demos/colab/: colab_demo.ipynb  demo.py  distance_function.py  draw.py  requirements.txt  yolo.py
demos/degirum/: Dockerfile  README.md  requirements.txt  run.sh
demos/degirum/src/: demo.py
demos/detectron2/: Dockerfile  Dockerfile.local  README.md  detectron2_cars.py  requirements.txt  run_docker.sh  run_gpu.sh
demos/detectron2/src/: demo.py  demo_no_tracking.py  detectron2_config.yaml
demos/keypoints_bounding_boxes/: Dockerfile  Dockerfile.local  README.md  keypoints_bounding_boxes_demo.ipynb  keypoints_bounding_boxes_demo.py  requirements.txt  run_docker.sh  run_gpu-copy.sh  run_gpu.sh
demos/keypoints_bounding_boxes/src/: demo.py  (+1 more)
demos/mmdetection/: .gitignore  Dockerfile  Dockerfile.local  README.md  mmdetection_cars.py  requirements.txt  run_docker.sh  run_gpu.sh
demos/motmetrics4norfair/: Dockerfile  Dockerfile.local  README.md  motmetrics4bytetrack.py  motmetrics4norfair.py  motmetrics4norfair_xyah.py  requirements.txt  run.sh  run_docker.sh
demos/multi_camera/: README.md  demo.py  run_gpu.sh
demos/openpose/: Dockerfile  Dockerfile.local  README.md  openpose_config.yml  openpose_extrapolation.ipynb  openpose_extrapolation.py  openpose_interpolation.py  requirements.txt  run_docker.sh  run_gpu.sh
demos/openpose_complex/: README.md  openpose_extrapolation_complex.py
demos/profiling/: Dockerfile  Dockerfile.local  README.md  requirements.txt  run_docker.sh  run_gpu.sh
demos/reid/: Dockerfile  Dockerfile.local  README.md  requirements.txt  run.sh  run_docker.sh
demos/sahi/: Dockerfile  README.md  requirements.txt  run.sh
demos/yolo_nas/: Dockerfile  README.md  requirements.txt  run_gpu.sh
demos/yolopv2/: Dockerfile  README.md  requirements.txt  run_gpu.sh
demos/yolov4/: Dockerfile  Dockerfile.local  README.md  requirements.txt  run_docker.sh  run_gpu.sh  yolov4_demo.ipynb  yolov4demo.py
demos/yolov5/: Dockerfile  Dockerfile.local  README.md  requirements.txt  run_docker.sh  run_gpu.sh  yolov5_demo.ipynb  yolov5demo.py
demos/yolov7/: Dockerfile  Dockerfile.local  README.md  run_docker.sh  run_gpu.sh  yolov7_demo.ipynb  yolov7demo.py
dev/: 404.html  deploy_docs.py  index.html  objects.inv  sitemap.xml
dev/getting_started/: index.html
dev/reference/: index.html
dev/search/: search_index.json
docs/: API.md  README.md  deploy_docs.py  gen_index.py  getting_started.md  index.md  requirements.txt
docs/css/: custom.css
docs/js/: math.js
docs/reference/: camera_motion.md  distances.md  drawing.md  filter.md  index.md  metrics.md  tracker.md  utils.md  video.md
latest/: 404.html  index.html
latest/getting_started/: index.html
latest/reference/: index.html
norfair/: __init__.py  camera_motion.py  common_reference_ui.py  distances.py  drawing.py  filter.py  kalman.py  lib_metrics.py  metrics.py  motion.py  multi_camera.py  optimized_iou.pyx  tracker.py  utils.py  video.py
norfair/drawing/: __init__.py  absolute_grid.py  color.py  draw_boxes.py  draw_points.py  drawer.py  fixed_camera.py  path.py  utils.py
tests/: conftest.py  metrics.txt  mot_metrics.py  test_distances.py  test_drawing.py  test_mot_metrics.py  test_norfair.py  test_tracker.py
(+43 files in other folders)
