[tool.poetry]
name = "norfair"
version = "2.2.0"
description = "Lightweight Python library for adding real-time multi-object tracking to any detector."
license = "BSD-3-Clause"
authors = ["Tryolabs <hello@tryolabs.com>"]
repository = "https://github.com/tryolabs/norfair"
readme = "README.md"
keywords = [
    "tracking",
    "object-detection",
    "object-tracking",
    "kalman-filter",
    "pose-estimation",
    "re-identification",
    "multi-object-tracking",
    "re-id",
    "tracking-algorithm",
    "deepsort",
    "video-tracking",
    "video-inference-loop"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Video"
]

[tool.poetry.dependencies]
python = "^3.7"
filterpy = "^1.4.5"
rich = ">=9.10.0, <13.0.0"
scipy = ">=1.5.4"
numpy = [
    {version = "^1.19.0", python = "<3.8"},
    {version = "^1.23.0", python = ">=3.8"}
]
opencv-python = { version = ">= 3.2.0, < 5.0.0", optional = true }
motmetrics = { version = "1.4.0", optional = true }
importlib-metadata = { version = "4.8.3", python = "<3.8" }

[tool.poetry.extras]
metrics = ["motmetrics"]
video = ["opencv-python"]

[tool.poetry.group.test.dependencies]
pylint = "^2.12.0"
pytest = "^6.2.5"
tox = "^3.26.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
